# TicTacToe

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: resource.rc
include/: console.h  disegno.h  grafica.h  input.h  verifica.h
src/: console.c  disegno.c  grafica.c  input.c  main.c  verifica.c
